# captionise

./: README.md  docker-compose.yml  pyproject.toml
assets/: jobs.csv
captionise/: __init__.py  mock.py  protocol.py  store.py
captionise/base/: evalution.py  miner.py  neuron.py  reward.py  validator.py
captionise/config/: base_config.py
captionise/miners/: captionise_miner.py
captionise/utils/: config.py  database.py  dataset.py  logger.py  ops.py
contrib/: CONTRIBUTING.md  DEVELOPMENT_WORKFLOW.md  STYLE.md
docker/: Dockerfile.miner  Dockerfile.validator
neurons/: caption_miner.py  caption_validator.py  caption_vallidator.py
pm2_configs/: miner.config.js  validator.config.js
scripts/: install_staging.sh  run_miner.sh  run_validator.sh  setup_local.sh
